--- a/src/components/customers/CustomerReviews.css
+++ b/src/components/customers/CustomerReviews.css
@@ -3,7 +3,7 @@
 padding-bottom:3rem;
 } 
 .customer h1{
-    color:#545454;
+    color:silver;
 }
 
 .review-container{
@@ -50,3 +50,4 @@ padding-bottom:3rem;
     font-size: 1rem;
     padding:.5rem 0;
 }
+
