--- a/src/components/listSlider/embla.css
+++ b/src/components/listSlider/embla.css
@@ -14,6 +14,12 @@
     touch-action: pan-y;
     margin-left: calc(var(--slide-spacing) * -1);
   }
+
+ .embla h1{
+    color:silver;
+    margin-bottom:1.5rem;
+}
+
   .embla__slide {
     /* flex: 0 0 var(--slide-size); */
     flex:0 0 300px;
