--- a/src/components/listSlider/matchList.css
+++ b/src/components/listSlider/matchList.css
@@ -14,4 +14,9 @@
 .card-title{
     text-decoration: none;
     text-decoration-style: none;
+    background-color: #000;
+}
+.venue{
+    background-color: #000;
+
 }
