--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* added tailwind  css which is used in login page and book ticket c omponents */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
