--- a/src/components/customers/CustomerReviews.css
+++ b/src/components/customers/CustomerReviews.css
@@ -27,13 +27,15 @@ padding-bottom:3rem;
     flex:1 1 15rem;  
     background: #333;
     margin-top: 10rem;  
+    border-top-left-radius: 3rem;
+    border-top-right-radius: 3rem;
 } 
 
 .box img{
    height:12rem;
    width:12rem;
    
-   border-radius: 30%;
+   border-radius: 25%;
    border:1rem solid #fff;
    margin-top: -7rem;
    object-fit:cover;  
@@ -51,3 +53,51 @@ padding-bottom:3rem;
     padding:.5rem 0;
 }
 
+
+
+
+/* css to be added in ticket cards */
+
+.ticket-container{
+    /* width:100%; */
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    padding:2rem;
+    gap:2rem;
+}
+
+.ticket-card{
+    width:450px;
+    padding:0 0 3rem 0;
+    /* border:5px solid #dcca87 ; */
+    border-radius: 3rem;
+    background-color: #10100d;
+    box-shadow: 1px 10px 0px #dcca87;
+
+}
+.ticket-card h1{
+    background-color: #DCCA87;
+    padding-top:1rem;
+    color:#333;
+    border-top-left-radius: 2rem;
+    border-top-right-radius: 2rem;
+}
+.second-row{
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color:#fff;
+    display:flex;
+    justify-content: space-between;
+    margin-top:2rem;
+}
+.profile-container{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    border-bottom:0.1rem solid #DCCA87;
+    
+}
