--- a/src/components/eventDetails/eventDetails.css
+++ b/src/components/eventDetails/eventDetails.css
@@ -1,62 +1,165 @@
-.eventDetails{
-    width:100%;
-    background-color: #0C0C0C;
-    text-align: center;
+.eventDetails {
+  width: 100%;
+  background-color: #0c0c0c;
+  text-align: center;
 }
 
-.back-img{
-    width:100%;
-    height:600px;
-    overflow-y: hidden;
+.back-img {
+  width: 100%;
+  max-height: 600px;
+  overflow-y: hidden;
 }
 
-.content{
-    width:100%;
-    padding-left: 7rem;
-    padding-right:7rem;
-    height:700px;
-    display:grid;
-    position:relative;
-    bottom:200px;
+.content {
+  width: 100%;
+  padding-left: 7rem;
+  padding-right: 7rem;
+  display: grid;
+  position: relative;
+  bottom: 200px;
 }
 
-.event-details{ 
-    height:700px;
-    background-color: #000;
-    text-align: left;
+.event-details {
+  background-color: #000;
+  text-align: left;
 }
 
-.event-details img{
-margin-left:5rem;
-width:50%;
-height: auto;
-position:relative;
-bottom:100px;
-
+.event-details img {
+  margin-left: 5rem;
+  width: 50%;
+  height: auto;
+  position: relative;
+  bottom: 100px;
 }
 
-.side-content{
-    margin-top:150px;
-    height:500px;  
-    background-color: #DCCA87;
-    text-align:center;
-    border-bottom-right-radius: 50px 50px;
-    position:relative;
-    top:100px;
+.side-content {
+  margin-top: 100px;
+  height: 85%;
+  background-color: #dcca87;
+  text-align: center;
+  border-bottom-right-radius: 50px 50px;
+  position: relative;
+  top: 100px;
 }
 
-.content-part{
-    margin-left:5rem;
+.content-part {
+  margin-left: 5rem;
+  position: relative;
+  bottom: 100px;
+}
+
+.content-part h2 {
+  color: #dcca87;
+}
+
+.content-description {
+  color: #e6e6e6;
+  margin-top: 3rem;
+  width: 80%;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  body {
+    font-size: 14px;
+  }
+
+  .event-details img {
+    margin-left: 2rem;
+    width: 50%;
+    height: auto;
     position: relative;
-    bottom:100px;
+    bottom: 50px;
+  }
+
+  .content-part {
+    margin-left: 2rem;
+    position: relative;
+    bottom: 50px;
+  }
+
+  .content-description {
+    font-size: 0.65rem;
+  }
+  .side-content {
+    font-size: 0.7rem;
+    height: 600px;
+    text-align: center;
+    border-bottom-right-radius: 50px 50px;
+    position: relative;
+  }
 }
 
-.content-part h2{
-    color:#DCCA87
+@media only screen and (min-width: 390px) and (max-width: 767px) {
+  body {
+    font-size: 10px;
+  }
+
+  .event-details img {
+    margin-left: 1.5rem;
+    width: 50%;
+    height: auto;
+    position: relative;
+    bottom: 50px;
+  }
+  .content {
+    width: 90%;
+    padding: 0;
+    position: relative;
+    bottom: 100px;
+    padding-left: 3rem;
+  }
+  .content-part {
+    margin-left: 1.5rem;
+    position: relative;
+    bottom: 50px;
+  }
+
+  .content-description {
+    width: 90%;
+    font-size: 0.65rem;
+  }
+  .side-content {
+    position: relative;
+    bottom: 300px;
+  }
 }
 
-.content-description{
-    color:#e6e6e6;
-    margin-top:3rem;
-    width:80%;
+@media only screen and (max-width: 390px) {
+  body {
+    font-size: 7px;
+  }
+
+  .event-details img {
+    margin-left: 1.25rem;
+    width: 70%;
+    height: auto;
+    position: relative;
+    bottom: 50px;
+  }
+  .event-details {
+    margin: 0;
+  }
+  .content {
+    width: 95%;
+    padding: 0;
+    position: relative;
+    bottom: 40px;
+    padding-left: 1.5rem;
+  }
+  .content-part {
+    margin-left: 1.5rem;
+    position: relative;
+    bottom: 40px;
+  }
+
+  .content-description {
+    margin-top: 2rem;
+    width: 95%;
+    font-size: 0.55rem;
+  }
+  .side-content {
+    max-height: 350px;
+    position: relative;
+    bottom: 300px;
+  }
 }
