--- a/src/components/listSlider/embla.css
+++ b/src/components/listSlider/embla.css
@@ -1,70 +1,68 @@
 .embla {
-    --slide-spacing: 1rem;
-    --slide-size: 30%;
-    --slide-height: 19rem;
-    padding: 1.6rem;
-    justify-content: fit-content;
-  }
-  .embla__viewport {
-    overflow: hidden;
-  }
-  .embla__container {
-    backface-visibility: hidden;
-    display: flex;
-    touch-action: pan-y;
-    margin-left: calc(var(--slide-spacing) * -1);
-  }
-           
- .embla h1{
-    color:silver;
-    margin-bottom:1.5rem;
+  --slide-spacing: 1rem;
+  --slide-size: 30%;
+  --slide-height: 19rem;
+  padding: 1.6rem;
+  justify-content: fit-content;
+}
+.embla__viewport {
+  overflow: hidden;
+}
+.embla__container {
+  backface-visibility: hidden;
+  display: flex;
+  touch-action: pan-y;
+  margin-left: calc(var(--slide-spacing) * -1);
 }
 
-  .embla__slide {
-    flex:0 0 300px;
-    min-width: 0;
-    padding-left: var(--slide-spacing);
-    position: relative;
-  }
-  .embla__slide__img {
-    display: block;
-    height: var(--slide-height);
-    width: 100%;
-    object-fit: cover;
-  }
- 
-  .embla__button {
-                     
-    background-color: white;
-    touch-action: manipulation;
-    display: inline-flex;
-    text-decoration: none;
-    cursor: pointer;
-    border: 0;
-    padding: 0;
-    margin: 0;
-  }
-  .embla__buttons {
-    display: flex;
-    align-items: center;
-   margin-left:45%;
-    left: 1.6rem;
-    background-color:#0c0c0c;
-  }
-  .embla__button {
-    z-index: 1;
-    color: #DCCA87;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
-    width: 4rem;
-    height: 4rem;
-    background-color:#0c0c0c;
-  }
+.embla h1 {
+  color: silver;
+  margin-bottom: 1.5rem;
+}
 
-  .embla__button__svg {
-    width: 65%;
-    height: 65%;
-  }
-  
+.embla__slide {
+  flex: 0 0 300px;
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+  position: relative;
+}
+.embla__slide__img {
+  display: block;
+  height: var(--slide-height);
+  width: 100%;
+  object-fit: cover;
+}
+
+.embla__button {
+  background-color: white;
+  touch-action: manipulation;
+  display: inline-flex;
+  text-decoration: none;
+  cursor: pointer;
+  border: 0;
+  padding: 0;
+  margin: 0;
+}
+.embla__buttons {
+  display: flex;
+  align-items: center;
+  left: 1.6rem;
+  background-color: #0c0c0c;
+}
+.embla__button {
+  z-index: 1;
+  color: #dcca87;
+  display: flex;
+  margin: auto;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 4rem;
+  height: 4rem;
+  background-color: #0c0c0c;
+}
+
+.embla__button__svg {
+  width: 65%;
+  height: 65%;
+}
