added Search and mobile view for ticket is adjusted

--- a/src/components/eventDetails/eventDetails.css
+++ b/src/components/eventDetails/eventDetails.css
@@ -158,8 +158,8 @@
     font-size: 0.55rem;
   }
   .side-content {
-    max-height: 350px;
+    max-height: 550px;
     position: relative;
-    bottom: 300px;
+    top: 10px;
   }
 }
